# scottish_backend

./: .gitignore  .pre-commit-config.yaml  Makefile  mypy.ini  pyproject.toml
scottish_backend/api/: __init__.py  response.py
scottish_backend/app/: app.py  exceptions.py
scottish_backend/core/: __init__.py  config.py
